<resources>
    <string name="app_name">CBTP Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="splash_tagline_text">Tagline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="facebook_app_id">177305223193728</string>-->
    <!--<string name="fb_login_protocol_scheme">fb177305223193728</string>-->
    <string name="facebook_app_id">835307826652772</string>
    <string name="fb_login_protocol_scheme">fb835307826652772</string>
    <string name="signup_create_account_text">Create Account</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="featured_products">Featured Products</string>
    <string name="see_more">See more</string>
    <string name="best_selling_products">Best Selling Products</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="already_a_member_signup_text">Already a Member?</string>
    <string name="signup_create_account">Create Account</string>
    <string name="nav_drawer_pay">Pay</string>
    <string name="nav_drawer_login">Login / Register</string>
    <string name="nav_drawer_wallet">Wallet</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="rupee">\u20B9</string>
    <string name="payments_notification_channel_id">1</string>


</resources>
