<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_name"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/product_image"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="15sp"
        android:text="@string/price"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_price"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="25sp"
            android:textStyle="bold"/>
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/product_buy_button"-->
        <!--android:layout_margin="10dp"-->
        <!--android:gravity="center"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:textAlignment="center"-->
        <!--android:text="@string/buy_now"/>-->
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/product_add_to_cart_button"-->
        <!--android:layout_margin="10dp"-->
        <!--android:gravity="center"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:textAlignment="center"-->
        <!--android:text="@string/add_to_cart"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/description"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_desc"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:textSize="18sp" />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/product_buy_button"
    android:layout_margin="10dp"
    android:gravity="center"
    android:paddingLeft="10dp"
        android:paddingRight="10dp"
    android:textAlignment="center"
    android:text="@string/buy_now"/>



</LinearLayout>